Fix tempo screen layout on smaller display size

--- a/data/Themes/Application.css
+++ b/data/Themes/Application.css
@@ -224,7 +224,7 @@ button.pulse-fill {
     background-position: center 100%;
     box-shadow: inset 0 8px 12px #0004, 0 1px #fff4, 0 -1px #0004, 1px 0 alpha(@accent_color_complimentary, 0.2);
     border: 1px solid #0008;
-    border-radius: 15px;
+    border-radius: 50%;
 }
 
 .adw-listbox>row {
